Initial layout design

--- a/conf/application.properties
+++ b/conf/application.properties
@@ -10,11 +10,8 @@ discovery.host=localhost
 # Port the discovery is living on
 discovery.port=8189
 
-# Host the peer is living on ( localhost )
-peer.host=lincoln
-
-# Outbound directory for the peer read files from ( data/ )
-peer.outbound.directory=data/
+# Host the store is living on ( localhost )
+store.host=lincoln
 
 # Set log level for the application ( INFO / DEBUG )
 system.log.level=DEBUG
