--- a/conf/application.properties
+++ b/conf/application.properties
@@ -5,7 +5,7 @@
 #########################################################################
 
 # Host the discovery is living on ( localhost / jackson )
-discovery.host=localhost
+discovery.host=jackson
 
 # Port the discovery is living on
 discovery.port=8189
