updated logic for closest peer

--- a/conf/application.properties
+++ b/conf/application.properties
@@ -14,4 +14,4 @@ discovery.port=8189
 store.host=lincoln
 
 # Set log level for the application ( INFO / DEBUG )
-system.log.level=INFO
+system.log.level=DEBUG
