--- a/conf/application.properties
+++ b/conf/application.properties
@@ -5,13 +5,10 @@
 #########################################################################
 
 # Host the discovery is living on ( localhost / jackson )
-discovery.host=localhost
+discovery.host=jackson
 
 # Port the discovery is living on
 discovery.port=8189
 
-# Host the store is living on ( localhost )
-store.host=lincoln
-
 # Set log level for the application ( INFO / DEBUG )
-system.log.level=DEBUG
+system.log.level=INFO
