redefine base logic for join

--- a/conf/application.properties
+++ b/conf/application.properties
@@ -5,10 +5,10 @@
 #########################################################################
 
 # Host the discovery is living on ( localhost / jackson )
-discovery.host=jackson
+discovery.host=localhost
 
 # Port the discovery is living on
 discovery.port=8189
 
 # Set log level for the application ( INFO / DEBUG )
-system.log.level=INFO
+system.log.level=DEBUG
