updated logic for numerical closeness

--- a/conf/application.properties
+++ b/conf/application.properties
@@ -5,10 +5,13 @@
 #########################################################################
 
 # Host the discovery is living on ( localhost / jackson )
-discovery.host=localhost
+discovery.host=jackson
 
 # Port the discovery is living on
 discovery.port=8189
 
 # Set log level for the application ( INFO / DEBUG )
-system.log.level=DEBUG
+system.log.level=INFO
+
+# Set the display style for the DHT ( SHORT / LONG )
+system.dht.style=SHORT
