added property for dht styles

--- a/conf/application.properties
+++ b/conf/application.properties
@@ -14,4 +14,4 @@ discovery.port=8189
 system.log.level=INFO
 
 # Set the display style for the DHT ( SHORT / LONG )
-system.dht.style=SHORT
+system.dht.style=LONG
